<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestGNRS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_ip">i.e. 192.168.1.1</string>
    <string name="gnrs_text">GNRS Server IP:  </string>
    <string name="sample_guid">i.e. 12345</string>
    <string name="port_text">GNRS Server Port:  </string>
    <string name="sample_port">i.e. 5000</string>
    <string name="guid_text">GUID to Query:  </string>
    <string name="guid_add_text">GUID to Add:  </string>
    <string name="start">Start</string>
    <string name="lookup">Lookup</string>
    <string name="add">Add</string>
    <string name="stop">Stop</string>
    <string name="look_res">Query Result:</string>

</resources>
